# stlc-nbe

./: CHANGELOG.md  README.md  cabal.project  stlc-nbe.cabal
src/: STLC.hs
test/: Spec.hs
