cabal-version:      2.4
name:               stlc-nbe
version:            0.1.0.0
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/wenkokke/stlc-nbe

library
    exposed-modules:    STLC
    hs-source-dirs:     src
    build-depends:      base        >=4.7 && <5
                      , lazy-search ==0.1.2.1
                      , size-based  ==0.1.2.1
    default-extensions: DeriveFunctor
                      , EmptyCase
                      , EmptyDataDeriving
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , LambdaCase
                      , PatternSynonyms
                      , RankNTypes
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , TypeApplications
    default-language:   Haskell2010
    ghc-options:        -Wall -Wno-missing-methods

test-suite test-eq-nbs-nbe
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    build-depends:      base        >=4.7 && <5
                      , HUnit
                      , lazy-search ==0.1.2.1
                      , size-based  ==0.1.2.1
                      , stlc-nbe
    default-extensions: LambdaCase
                      , TypeApplications
    default-language:   Haskell2010